# gate_designer

./: README.md  config.json  demo.py  enhanced_demo.py  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
calculations/: structural_analysis.py
data/: README.md  steel_sections.json
designs/: gate_designer.py
docs/: getting_started.md
documentation/: report_generator.py
output/: README.md
output/gate_6.0x2.4m/: calculation_summary.txt  gate_drawings.txt  material_list.json  specifications.txt  structural_calculations.json
reference/: tymetal_fortress.py
src/analysis/: advanced_structural.py
src/core/: materials.py
src/reports/: excel_generator.py
src/visualization/: engineering_plots.py
utils/: cli_interface.py  config.py  engineering_constants.py  material_properties.py
