[project]
name = "gate-designer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.6.0",
    "pandas>=1.5.0",
    "scipy>=1.10.0",
    "openpyxl>=3.1.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "fpdf2>=2.7.0",
    "pillow>=9.4.0",
    "seaborn>=0.12.0",
]


[tool.setuptools.package-data]
"*" = ["output/*", "output/**/*"]


[tool.setuptools.packages.find]
where = ['src']
include = ['*']
